# MaterialFiles

./: .gitignore  PRIVACY.md  README.md  README_zh-CN.md  SECURITY.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle.kts  signing.gradle  signing.properties.example
app/: .gitignore  CMakeLists.txt  build.gradle  google-services.json  proguard-rules.pro
app/libs/: me.zhanghai.android.sevenzipjbinding.aar
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/jni/: hiddenapi.c  syscall.c  syscalls.c
app/src/main/native/: fs.c  linux.c  syscalls.c
app/src/main/res/: resources.properties
app/src/main/res/anim/: list_item.xml
app/src/main/res/color/: m3_dark_default_color_secondary_text.xml  m3_default_color_secondary_text.xml  navigation_item_subtitle_text_color.xml  navigation_item_subtitle_text_color_material3.xml  storage_name.xml  switch_thumb_tint_dark_material3.xml  switch_thumb_tint_light_material3.xml
app/src/main/res/color-v31/: m3_dynamic_dark_default_color_secondary_text.xml  m3_dynamic_default_color_secondary_text.xml  primary_text_md3_dark.xml  primary_text_md3_light.xml  secondary_text_md3_dark.xml  secondary_text_md3_light.xml  tertiary_text_md3_dark.xml  tertiary_text_md3_light.xml
app/src/main/res/drawable-desk/: device_icon_white_24dp.xml
app/src/main/res/drawable-sw600dp/: device_icon_white_24dp.xml
app/src/main/res/drawable-television/: device_icon_white_24dp.xml
(+2532 files in other folders)
